<resources>
    <string name="app_name">MaxiPollo</string>
    <string name="Comidas">Comidas</string>
    <string name="bebidas">Bebidas</string>
    <string name="title_activity_navigation_drawer">activity_navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="manana">Mañana</string>
    <string name="tarde">Tarde</string>
    <string name="precio">Precio</string>
    <string name="noche">Noche</string>
    <string name="entrada">Entrada</string>
    <string name="plato_fuerte">Plato Fuerte</string>
    <string name="ingrese_los_ingredientes">Ingrese los ingredientes</string>
    <string name="ingreComidas">Ingredientes:</string>
    <string name="ingreBebidas">Ingredientes:</string>
    <string name="maniana">Mañana</string>
    <string name="tipo_comida">Tipo Comida:</string>
    <string name="horario">Horario:</string>
    <string name="precio_comida">Precio $</string>
    <string name="precio_bebida">Precio $</string>
    <string name="tiempo_preparacion">Tiempo Preparación</string>
    <string name="nombre_bebida">Nombre</string>
    <string name="informacion_ingresada">Información Ingresada</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="registrar">Registrar</string>
    <string name="limpiar">Limpiar</string>
    <string name="salir">Salir</string>
    <string name="title_activity_comidas2">activity_comidas2</string>
</resources>
